# event-planning-assistant

./: .env.template  .gitignore  QUICK_REFERENCE.md  README.md  config_react.yml  config_react_with_gdrive.yml  config_rewoo.yml  database_setup.py  google_drive_mcp.py  pyproject.toml  requirements.txt
event_planning_nemo/: database_tools.py  filesystem.py  memo.py  register.py
event_planning_nemo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
